agreo el proyecto funeraria

--- a/Principal.html
+++ b/Principal.html
@@ -10,7 +10,7 @@
      <!-- Bootstrap CSS -->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
-     <title>Perfil</title>
+     <title>Jose Muñoz</title>
 </head>
 <body>
     
@@ -164,7 +164,38 @@
                     <div>
                         <h2>Proyecto</h2>
                         <div class="margenes2">
-                            <div class="tarjeta_proyecto"></div>
+                            <div class="tarjeta_proyecto">
+                                <div class="titulo">funenaria San Jose</div>
+                                <div class="cuadro_imagenes">
+                                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                                    <div class="carousel-indicators">
+                                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                    </div>
+                                    <div class="carousel-inner">
+                                      <div class="carousel-item active cuadro_imagenes">
+                                        <img src="images/principal1.jpg" class="d-block w-100" alt="...">
+                                      </div>
+                                      <div class="carousel-item cuadro_imagenes">
+                                        <img src="images/colibri2.jpg" class="d-block w-100" alt="...">
+                                      </div>
+                                      <div class="carousel-item cuadro_imagenes">
+                                        <img src="images/foto.jpg" class="d-block w-100" alt="...">
+                                      </div>
+                                    </div>
+                                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Previous</span>
+                                    </button>
+                                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                      <span class="visually-hidden">Next</span>
+                                    </button>
+                                  </div>
+                                </div>
+                                <div class="descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia culpa, repudiandae ratione ab minus et, labore quisquam facere temporibus laudantium, dignissimos saepe deserunt sunt necessitatibus vero autem repellendus nulla in aut quod incidunt pariatur odit est? Necessitatibus quaerat animi earum. Officia doloribus amet numquam maiores ut voluptatum sit quaerat rem!</div>
+                            </div>
                          </div>
         
                     </div>
