--- a/Principal.html
+++ b/Principal.html
@@ -163,33 +163,41 @@
                 <div  id="proyectos"class="secion5">
                     <div>
                         <h2>Proyecto</h2>
-                        <div class="margenes2">
+                        <div>
                             <div class="tarjeta_proyecto">
                                 <div class="titulo">funenaria San Jose</div>
                                 <div class="cuadro_imagenes">
                                     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                                     <div class="carousel-indicators">
-                                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active bg-success" aria-current="true" aria-label="Slide 1"></button>
+                                      <button class=" bg-success" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                      <button class=" bg-success" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                      <button class="bg-success" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                                      <button class="bg-success" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
                                     </div>
                                     <div class="carousel-inner">
                                       <div class="carousel-item active cuadro_imagenes">
-                                        <img src="images/principal1.jpg" class="d-block w-100" alt="...">
+                                        <img src="images/imagen1.png" class="d-block w-100" alt="...">
                                       </div>
                                       <div class="carousel-item cuadro_imagenes">
-                                        <img src="images/colibri2.jpg" class="d-block w-100" alt="...">
+                                        <img src="images/imagen2.png" class="d-block w-100" alt="...">
                                       </div>
                                       <div class="carousel-item cuadro_imagenes">
-                                        <img src="images/foto.jpg" class="d-block w-100" alt="...">
+                                        <img src="images/imagen3.png" class="d-block w-100" alt="...">
+                                      </div>
+                                      <div class="carousel-item cuadro_imagenes">
+                                        <img src="images/imagen4.png" class="d-block w-100" alt="...">
+                                      </div>
+                                      <div class="carousel-item cuadro_imagenes">
+                                        <img src="images/imagen5.png" class="d-block w-100" alt="...">
                                       </div>
                                     </div>
                                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                      <span class="carousel-control-prev-icon bg-success" aria-hidden="true"></span>
                                       <span class="visually-hidden">Previous</span>
                                     </button>
                                     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                      <span class="carousel-control-next-icon bg-success" aria-hidden="true"></span>
                                       <span class="visually-hidden">Next</span>
                                     </button>
                                   </div>
