--- a/Principal.html
+++ b/Principal.html
@@ -17,15 +17,16 @@
 
     <header>
     </header>
+    <section class="cubre_fondo">
+    </section>
     
     <section class="cuerpo">
         <div class="cuerpo2">
             <nav>
                 <a href="" class="logo"></a>
-                <ul class="enlaces-menu">
-                    <li> <a href="">INICIO</a></li>
-                    <li> <a href="#staticBackdrop">CONTACTAME</a></li>
-                    <li><a href="#proyectos">PORTAFOLIO</a></li>
+                <ul class="enlaces-menu ">
+                    <li> <a href="">Inicio</a></li> 
+                    <li><a href="#proyectos">Portafolio</li><a></li>
                 </ul>
                 <button class="boton" type="button">
                     <span class="br-1"></span>
@@ -60,23 +61,13 @@
                             </div>
                         </div>
                 </div>
-                <div class="transparencia2">   
-                    <div class="cuadro29">
-                        <div class="imagen2"> </div>
-                    </div> 
-                    <div class="cuadro28">
-                        <div class="imagen"> </div>
-                    </div> 
-                    <div class="cuadro29">
-                        <div class="imagen2"> </div>
-                    </div> 
-                </div>
+
             </section>
 
             <section>
                 <div class="secion3">
                     <div>
-                        <h2>LENGUAJES Y FRAMERWORKS</h2>
+                        <h2>Lenguajes y Frameworks</h2>
                     </div>
                     <div class="margenes">
                         <div class="cuadro_imagen">
@@ -165,7 +156,7 @@
                         <h2>Proyecto</h2>
                         <div>
                             <div class="tarjeta_proyecto">
-                                <div class="titulo">funenaria San Jose</div>
+                                <div class="titulo">Funenaria "San Jose"</div>
                                 <div class="cuadro_imagenes">
                                     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                                     <div class="carousel-indicators">
@@ -176,19 +167,19 @@
                                       <button class="bg-success" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
                                     </div>
                                     <div class="carousel-inner">
-                                      <div class="carousel-item active cuadro_imagenes">
+                                      <div class="carousel-item active ">
                                         <img src="images/imagen1.png" class="d-block w-100" alt="...">
                                       </div>
-                                      <div class="carousel-item cuadro_imagenes">
+                                      <div class="carousel-item ">
                                         <img src="images/imagen2.png" class="d-block w-100" alt="...">
                                       </div>
-                                      <div class="carousel-item cuadro_imagenes">
+                                      <div class="carousel-item ">
                                         <img src="images/imagen3.png" class="d-block w-100" alt="...">
                                       </div>
-                                      <div class="carousel-item cuadro_imagenes">
+                                      <div class="carousel-item ">
                                         <img src="images/imagen4.png" class="d-block w-100" alt="...">
                                       </div>
-                                      <div class="carousel-item cuadro_imagenes">
+                                      <div class="carousel-item ">
                                         <img src="images/imagen5.png" class="d-block w-100" alt="...">
                                       </div>
                                     </div>
@@ -202,7 +193,17 @@
                                     </button>
                                   </div>
                                 </div>
-                                <div class="descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia culpa, repudiandae ratione ab minus et, labore quisquam facere temporibus laudantium, dignissimos saepe deserunt sunt necessitatibus vero autem repellendus nulla in aut quod incidunt pariatur odit est? Necessitatibus quaerat animi earum. Officia doloribus amet numquam maiores ut voluptatum sit quaerat rem!</div>
+                                <div class="descripcion"> Diseño y desarrollo de una 
+                                    aplicación web para la gestión de ventas de los servicios exequiales de la 
+                                    funeraria “San José”, permite llevar el control en sus 
+                                    procesos, gestionando de forma ágil, rápida y eficiente, a través de un 
+                                    entorno web fácil de utilizar y accesible desde cualquier lugar que disponga de 
+                                    conexión a internet.
+                                    <br> <br>
+                                    Codificado en lenguaje Java en entorno web, mediante el IDE de NetBeans, utilizando el patron de diseño MVC, 
+                                    gestionado por la base de datos mysql y librerias de Sweetalert, Bootstrap, Datatables.
+                                </div>
+
                             </div>
                          </div>
         
